RESULTS/AutoSpec/raw_results/out-4o-oopsla/036_0001/036_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/036_0001/036_merged.c:38:5: error: unterminated comment
   38 |     /* For the second loop */;
      |     ^
